flex/flex-tests/testData/js2_highlighting/InaccessibleRefsReported.js2
package <error descr="Package name 'foo' does not correspond to file path ''">foo</error> {
class InaccessibleRefsReported {}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bar' does not correspond to file path ''">bar</error> {
import foo.<error descr="Element is not accessible">InaccessibleRefsReported</error>
var <error descr="Variable 'b' should be defined in file 'b.js2'">b</error>:<error descr="Element is not accessible">InaccessibleRefsReported</error>
}

class Bar {
    protected function foo():* {}
    private var bar;
}

new Bar().<error descr="Protected member is not accessible">foo</error>();
new Bar().<error descr="Private member is not accessible">bar</error> = 1;


